<resources>
    <string name="app_name" translatable="false">TimeSheet</string>
    <string name="day_before">Предыдущий день</string>
    <string name="day_after">Следующий день</string>
    <string name="action_list">Список дней</string>
    <string name="action_settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="delete">Удалить</string>
    <string name="saveToExcel">Сохранить базу данных в Excel</string>
    <string name="cleanDB">Очистить базу данных</string>
    <string name="openExcel">Открыть сохраненный excel файл</string>
    <string name="today">Сегодня</string>
    <string name="needToBeOnWorkTime">Длина рабочего дня</string>
    <string name="noExcelApp">Пожалуйста, установите программу для открытия excel файлов</string>
    <string name="deleteDB">Это действие приведет к удалению всех записей, вы уверены?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="open">Открыть</string>
    <string name="saved">Успешно сохранено в:</string>
    <string name="error">Ошибка:</string>
    <string name="timeMonth">Отработано в этом месяце:</string>
    <string name="came">Пришел</string>
    <string name="gone">Ушел</string>
    <string name="turnOnApp">Открыть приложение timesheet</string>
    <string name="small_widget">Две кнопки</string>
    <string name="medium_widget">Три кнопки</string>
    <string name="closeSearch">Закрыть панель поиска</string>
    <string name="shot_wtf">Помощь</string>
    <string name="wtfCame">Когда вы пришли на работу</string>
    <string name="wtfGone">Когда вы ушли с работы</string>
    <string name="wtfTimeWasOnWork">Как долго вы были на работе сегодня</string>
    <string name="wtfTimeLeftToWork">Сколько недоработали/переработали.</string>
    <string name="wtfWorkedHours">Сколько вы отработали в этом месяце</string>
    <string name="note">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="wtfNote">Заметка об этом дне</string>
    <string name="edit">Изменить</string>

    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
</resources>
