<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_today"
        android:title="@string/today"
        android:icon="@drawable/ic_today"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:title="@string/action_list"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_wtf"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/shot_wtf"
        app:showAsAction="never"/>


</menu>