<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:layout_gravity="center"
    android:orientation="horizontal"
    style="?android:buttonBarStyle"
    >

    <ImageButton
        android:id="@+id/widget3_btn_came"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_arrow_downward_white"
        android:contentDescription="@string/came" />

    <ImageButton
        android:id="@+id/widget3_btn_gone"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_arrow_upward_white"
        android:contentDescription="@string/gone"
        />

    <ImageButton
        android:id="@+id/widget3_btn_open_app"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/white"
        android:src="@mipmap/round_timesheet_big"
        android:scaleType="fitCenter"
        android:contentDescription="@string/turnOnApp"
        />
</LinearLayout>