<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.NoteActivity"
    android:background="@color/colorLightGreyBackground">

    <ImageView

        android:layout_marginTop="8dp"
        android:id="@+id/note_btn_cancel"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        android:src="@drawable/ic_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cancel" />

    <TextView
        android:id="@+id/note_text_dayOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/note_btn_cancel"
        app:layout_constraintStart_toEndOf="@id/note_btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/note_btn_save"
        tools:text="Воскресение"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/note_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/note_text_dayOfWeek"
        app:layout_constraintStart_toEndOf="@id/note_btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/note_btn_save"
        tools:text="23/23/2323"
        android:textSize="32sp"
        />

    <ImageView
        android:id="@+id/note_btn_save"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="@id/note_btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_save"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:contentDescription="@string/save" />

    <EditText
        android:id="@+id/note_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_text_date"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="textMultiLine|textNoSuggestions"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:hint="@string/note"
        android:background="@android:color/transparent"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>